# randumb

./: .gitignore  README.md  benchmark.py  mnist.py  setup.py  utils.py
mnist/: mnist.py
modded-nanogpt/: gpt_models.py  run.sh  train_gpt2.py
src/: RandumbTensor.py  RandumbTensor_(Depreceated).py  SillyLayers.py  utils.py
src/rten_cpp/: README.md  RandumbTensor.py  SillyLayers.py  __init__.py  ops.py  utils.py
src/rten_cpp/csrc/: CMakeLists.txt  main.cpp  rten.cpp
src/rten_cpp/csrc/cuda/: rten.cu  rten.cuh
